--- a/src/gui/assets/login.css
+++ b/src/gui/assets/login.css
@@ -138,3 +138,32 @@
 #welcomeLabel{
     -fx-font-size: 50px;
 }
+
+#dage{
+    -fx-font-size: 22px;
+    -fx-pref-height: 35px;
+    -fx-pref-width: 120px;
+    -fx-border-width: 1 1 1 1;
+    -fx-border-color: black;
+    -fx-background-position: center;
+}
+
+#emptyLabel{
+    -fx-pref-width: 75px;
+}
+
+#gemTimer{
+    -fx-background-color: green;
+    -fx-text-fill: white;
+    -fx-pref-width: 120px;
+    -fx-pref-height: 35px;
+    -fx-border-radius: 30;
+}
+
+#datoTextfield{
+    -fx-font-size: 12px;
+    -fx-pref-width: 120px;
+    -fx-pref-height: 35px;
+    -fx-background-color: black;
+    -fx-text-fill: white;
+}
