menu næsten done

--- a/src/gui/assets/login.css
+++ b/src/gui/assets/login.css
@@ -63,6 +63,7 @@
 #menuVBox {
     -fx-background-color: rgba(255, 255, 255, 0.2);
     -fx-background-radius: 10;
+    -fx-max-height: 100;
 }
 
 #fields{
